resolved errors and flickering from polling. next commit will re-construct approve-player route into multiple routes

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -9,6 +9,28 @@
   max-height: 20px;
   object-fit: contain;
 }
+.PhoneInput {
+  --PhoneInputCountryFlag-height: 25px;
+  --PhoneInputCountrySelectArrow-color: #fff;
+  --PhoneInputCountrySelect-marginRight: 0.5em;
+  --PhoneInputCountrySelect-borderWidth: 0;
+}
+
+.PhoneInputInput {
+  width: 100%;
+  padding: 0.5rem 1rem;
+  color: white;
+  background-color: rgb(55, 65, 81);
+  border-radius: 0.5rem;
+  outline: none;
+}
+
+.PhoneInputInput:focus {
+  --tw-ring-color: rgb(59, 130, 246);
+  --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
+  --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(2px + var(--tw-ring-offset-width)) var(--tw-ring-color);
+  box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
+}
 :root {
   --background: #ffffff;
   --foreground: #171717;
